--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.0
-flask-cors==4.0.0
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.6
 requests==2.31.0
 python-dotenv==1.0.0
-
