--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/:path*",
       "destination": "http://13.52.175.51:18181/api/:path*"
+    },
+    {
+      "source": "/static/:path*",
+      "destination": "http://13.52.175.51:18181/static/:path*"
     }
   ],
   "headers": [
@@ -20,6 +24,19 @@
         {
           "key": "Access-Control-Allow-Headers",
           "value": "X-Requested-With, Content-Type, Authorization"
+        }
+      ]
+    },
+    {
+      "source": "/static/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
