--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "lucide-react": "^0.294.0",
-    "react-helmet-async": "^2.0.4"
+    "react-helmet-async": "^2.0.4",
+    "raw-body": "^2.5.2",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.5",
