--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,9 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "http://13.52.175.51:18181/api/:path*"
-    },
-    {
-      "source": "/static/:path*",
-      "destination": "http://13.52.175.51:18181/static/:path*"
+  "functions": {
+    "api/remove-background.js": {
+      "maxDuration": 300
     }
-  ],
+  },
   "headers": [
     {
       "source": "/api/(.*)",
@@ -24,19 +19,6 @@
         {
           "key": "Access-Control-Allow-Headers",
           "value": "X-Requested-With, Content-Type, Authorization"
-        }
-      ]
-    },
-    {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
